Updated bash and HTML files for new GATK bundle files

--- a/index.html
+++ b/index.html
@@ -339,6 +339,8 @@ access.</span></code></pre>
       "Homo_sapiens/GATK/b37": ["gatk"],
       "Homo_sapiens/GATK/hg19": ["gatk"],
       "Homo_sapiens/GATK/hg38": ["gatk"],
+      "Homo_sapiens/GATK/GRCh37": ["gatk"],
+      "Homo_sapiens/GATK/GRCh38": ["gatk"],
       "Homo_sapiens/NCBI/build36.3": ["gtf", "bed12", "bismark", "bowtie", "bowtie2", "bwa", "star", "fasta", "chromosomes", "abundantseq", "smrna"],
       "Homo_sapiens/NCBI/build37.1": ["gtf", "bed12", "bismark", "bowtie", "bowtie2", "bwa", "star", "fasta", "chromosomes", "abundantseq", "smrna"],
       "Homo_sapiens/NCBI/build37.2": ["gtf", "bed12", "bismark", "bowtie", "bowtie2", "bwa", "star", "fasta", "chromosomes", "abundantseq", "smrna", "variation"],
